hphp/test/zend/good/Zend/tests/bug60099.php.expectf

Fatal error: __halt_compiler function should appear only at the top level in %s/bug60099.php on line 3
